src/test/ui/numeric/len.stderr
error[E0308]: mismatched types
  --> $DIR/len.rs:3:10
   |
LL |     test(array.len());
   |          ^^^^^^^^^^^ expected `u32`, found `usize`
   |
help: you can convert a `usize` to a `u32` and panic if the converted value doesn't fit
   |
LL |     test(array.len().try_into().unwrap());
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
